; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-dom.c_remove_stmt_or_phi.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_tree-ssa-dom.c_remove_stmt_or_phi.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@PHI_NODE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @remove_stmt_or_phi to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @remove_stmt_or_phi(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @TREE_CODE(i32 %4)
  %6 = load i64, i64* @PHI_NODE, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @remove_phi_node(i32 %9, i32* null)
  br label %15

11:                                               ; preds = %1
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @bsi_for_stmt(i32 %12)
  store i32 %13, i32* %3, align 4
  %14 = call i32 @bsi_remove(i32* %3, i32 1)
  br label %15

15:                                               ; preds = %11, %8
  ret void
}

declare dso_local i64 @TREE_CODE(i32) #1

declare dso_local i32 @remove_phi_node(i32, i32*) #1

declare dso_local i32 @bsi_for_stmt(i32) #1

declare dso_local i32 @bsi_remove(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
